# LEAF-HE

./: CMakeLists.txt  LICENSE  README.md  include.hpp  test.cpp
BFVscheme/: LWE_to_RLWE.hpp  Poly_eval.hpp  S2C.hpp
RandomNumberGenerator/: lac_param.h  rand.hpp
include/BFVscheme/: LT.hpp  S2C_slow.hpp
include/LWEscheme/: LWE_64.hpp
include/PCMM_CKKS/: Batch_encode_encrypt.hpp  Ct_pt_matrix_mul.hpp
include/RLWEscheme/: RLWE_64.hpp
include/test/: test_PCMM_CKKS.hpp  test_full_protocol.hpp  test_gelu_bert.hpp
test/: test_gelu.hpp
